--- a/backend/views/post-create.ejs
+++ b/backend/views/post-create.ejs
@@ -8,15 +8,18 @@
 <body>
     <%- include("partials/header.ejs") %>
     <h1>Are you inspired? Start writing!</h1>
-    <form action="/post/create" method="POST">
+    <form action="/post/create" method="POST" enctype="multipart/form-data">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="Forest Waterfall2" required><br>
+        <input type="text" id="title" name="title" value="Aurora Borealis: The Northern Lights" required><br>
 
         <label for="author">Author:</label>
-        <input type="text" id="author" name="author" value="Nikos" required><br>
+        <input type="text" id="author" name="author" value="Elena Papadopoulou" required><br>
 
-        <label for="image">Image (file name):</label>
-        <input type="text" id="image" name="image" placeholder="e.g. forest-waterfall.jpg" value="forest-waterfall2.jpg" required><br>
+        <!-- <label for="image">Image (file name):</label>
+        <input type="text" id="image" name="image" placeholder="e.g. forest-waterfall.jpg" value="forest-waterfall2.jpg" required><br> -->
+
+        <label for="image">Image (*jpg file)</label>
+        <input type="file" id="image" name="image" accept="image/jpg">
 
         <label for="content">Start writing...</label><br>
         <textarea id="content" name="content" rows="10" required></textarea><br>
