--- a/backend/views/post.ejs
+++ b/backend/views/post.ejs
@@ -6,6 +6,7 @@
     <title>Post</title>
 </head>
 <body>
+    <%- include("partials/header.ejs") %>
     <h1><%= post.title %></h1>
     <div>
         <p><strong>Author: </strong><%= post.author %></p>
