--- a/backend/views/post-create.ejs
+++ b/backend/views/post-create.ejs
@@ -10,10 +10,10 @@
     <h1>Are you inspired? Start writing!</h1>
     <form action="/post/create" method="POST" enctype="multipart/form-data">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="Aurora Borealis: The Northern Lights" required><br>
+        <input type="text" id="title" name="title" value="sample title" required><br>
 
         <label for="author">Author:</label>
-        <input type="text" id="author" name="author" value="Elena Papadopoulou" required><br>
+        <input type="text" id="author" name="author" value="sample name" required><br>
 
         <!-- <label for="image">Image (file name):</label>
         <input type="text" id="image" name="image" placeholder="e.g. forest-waterfall.jpg" value="forest-waterfall2.jpg" required><br> -->
@@ -23,6 +23,8 @@
 
         <label for="content">Start writing...</label><br>
         <textarea id="content" name="content" rows="10" required></textarea><br>
+
+<!-- when UPDATING the post, change the date published to the new date (date modified) -->
 
         <button type="submit">Create Post</button>
     </form>
