Implementation of updating a post's fields

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/js/deletePost.js" defer></script>
+    <script src="/js/handlePost.js" defer></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -23,10 +23,8 @@
                     </div>
                 </a>
                 <br>
-                <button onclick="deletePost('<%=post.id%>')">DELETE POST</button>
-                <form action="/posts/update/<%=post.id%>" method="UPDATE">
-                    <button type="submit">MODIFY POST</button>
-                </form>
+                <button onclick="remove('<%=post.id%>')">DELETE POST</button>
+                <button onclick="getModify('<%=post.id%>')">MODIFY POST</button>
             </div>
         <% }); %>
     </ul>
