--- a/backend/views/post.ejs
+++ b/backend/views/post.ejs
@@ -12,7 +12,7 @@
         <p><strong>Author: </strong><%= post.author %></p>
         <img style="width: 50%; height: 50%;" src="/<%= post.image.src %>" alt="<%= post.image.alt %>" />
         <p>Published on <%= post.datePublished %></p>
-        <p><%-post.content%></p>
+        <p id="content"><%-post.content%></p>
     </div>
 </body>
 </html>
