--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -1,4 +1,17 @@
-<div>
-    <a href="/">Home</a>
-    <a href="/post/create">Create Post</a>
-</div>
+<nav class="navbar">
+    <div class="navbar-container">
+        <a href="/" class="navbar-logo">
+            <img src="/icons/logo.png" alt="Logo" />
+        </a>
+        <div class="navbar-links">
+            <a href="/" class="nav-link">
+                <img src="/icons/home-icon.png" alt="Home Icon" class="nav-icon" />
+                Home
+            </a>
+            <a href="/post/create" class="nav-link">
+                <img src="/icons/create-icon.png" alt="Create Icon" class="nav-icon" />
+                Create Post
+            </a>
+        </div>
+    </div>
+</nav>
