--- a/backend/views/post-create.ejs
+++ b/backend/views/post-create.ejs
@@ -4,29 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <%- include("partials/header.ejs") %>
     <h1>Are you inspired? Start writing!</h1>
-    <form action="/post/create" method="POST" enctype="multipart/form-data">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="sample title" required><br>
-
-        <label for="author">Author:</label>
-        <input type="text" id="author" name="author" value="sample name" required><br>
-
-        <!-- <label for="image">Image (file name):</label>
-        <input type="text" id="image" name="image" placeholder="e.g. forest-waterfall.jpg" value="forest-waterfall2.jpg" required><br> -->
-
-        <label for="image">Image (*jpg file)</label>
-        <input type="file" id="image" name="image" accept="image/jpg">
-
-        <label for="content">Start writing...</label><br>
-        <textarea id="content" name="content" rows="10" required></textarea><br>
-
-<!-- when UPDATING the post, change the date published to the new date (date modified) -->
-
-        <button type="submit">Create Post</button>
-    </form>
+    <div class="create-post">
+        <form action="/post/create" method="POST" enctype="multipart/form-data">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" value="sample title" required><br>
+    
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author" value="sample name" required><br>
+    
+            <!-- <label for="image">Image (file name):</label>
+            <input type="text" id="image" name="image" placeholder="e.g. forest-waterfall.jpg" value="forest-waterfall2.jpg" required><br> -->
+    
+            <label for="image">Image (*jpg file)</label>
+            <input type="file" id="image" name="image" accept="image/jpg">
+    
+            <label for="content">Start writing...</label><br>
+            <textarea id="content" name="content" rows="10" required>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea><br>
+    
+    <!-- when UPDATING the post, change the date published to the new date (date modified) -->
+    
+            <button type="submit">Create Post</button>
+        </form>
+    </div>
+    
 </body>
 </html>
