--- a/backend/views/post-update.ejs
+++ b/backend/views/post-update.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/handlePost.js" defer></script>
     <title>Post Modification</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <%- include("partials/header.ejs") %>
