--- a/backend/views/post.ejs
+++ b/backend/views/post.ejs
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/post-styles.css">
 </head>
 <body>
     <%- include("partials/header.ejs") %>
-    <h1><%= post.title %></h1>
-    <div>
-        <p><strong>Author: </strong><%= post.author %></p>
-        <img style="width: 50%; height: 50%;" src="/<%= post.image.src %>" alt="<%= post.image.alt %>" />
-        <p>Published on <%= post.datePublished %></p>
-        <p id="content"><%-post.content%></p>
+    <div class="post-container">
+        <div class="post-image"><img src="/<%= post.image.src %>" alt="<%= post.image.alt %>" /></div>
+        <div class="post-title"><h1><%= post.title %></h1></div>
+        <div class="creator-info-container">
+            <div class="post-date-published"><p>Published on <%= post.datePublished %></p></div>
+            <span class="separator">|</span>
+            <div class="post-author"><p>by <%= post.author %></p></div>
+        </div>
+        <div class="post-content-container">
+            <div class="post-content2"><p id="content"><%-post.content%></p></div>
+        </div>
     </div>
+    
 </body>
 </html>
