navbar for smaller screens styling

--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -3,6 +3,11 @@
         <a href="/" class="navbar-logo">
             <img src="/icons/logo.png" alt="Logo" />
         </a>
+        <button class="navbar-toggle" onclick="toggleMenu()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
         <div class="navbar-links">
             <a href="/" class="nav-link">
                 <img src="/icons/home-icon.png" alt="Home Icon" class="nav-icon" />
