--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="/js/handlePost.js" defer></script>
     <script src="/js/handleScrolling.js" defer></script>
+    <script src="/js/handleNavbar.js" defer></script>
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 </head>
