--- a/backend/views/post-update.ejs
+++ b/backend/views/post-update.ejs
@@ -6,6 +6,7 @@
     <script src="/js/handlePost.js" defer></script>
     <title>Post Modification</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/handleNavbar.js" defer></script>
 </head>
 <body>
     <%- include("partials/header.ejs") %>
