--- a/backend/views/post.ejs
+++ b/backend/views/post.ejs
@@ -6,6 +6,7 @@
     <title>Post</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/post-styles.css">
+    <script src="/js/handleNavbar.js" defer></script>
 </head>
 <body>
     <%- include("partials/header.ejs") %>
