--- a/backend/views/post-update.ejs
+++ b/backend/views/post-update.ejs
@@ -6,27 +6,37 @@
     <script src="/js/handlePost.js" defer></script>
     <title>Post Modification</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/post-create-styles.css">
     <script src="/js/handleNavbar.js" defer></script>
 </head>
 <body>
     <%- include("partials/header.ejs") %>
-    <br>
-    <form action="/post/update/<%=post.id%>" method="post" enctype="multipart/form-data">
-        <h1>Modify the post</h1>
-        <label for="titleToUpdate"><strong>Title</strong></label>
-        <input type="text" id="titleToUpdate" name="titleToUpdate" value="<%=post.title%>"><br>
+    <div class="post-create-container">
+        <div class="create-post">
+            <form action="/post/update/<%=post.id%>" method="post" enctype="multipart/form-data">
+                <div class="left-column">
+                    <h1>Modify the post</h1>
+                    <label for="titleToUpdate"><strong>Title</strong></label>
+                    <input type="text" id="titleToUpdate" name="titleToUpdate" value="<%=post.title%>" placeholder="Modify the title">
 
-        <label for="authorToUpdate"><strong>Author</strong></label>
-        <input type="text" id="authorToUpdate" name="authorToUpdate" value="<%=post.author%>"><br>
+                    <label for="authorToUpdate"><strong>Author</strong></label>
+                    <input type="text" id="authorToUpdate" name="authorToUpdate" value="<%=post.author%>" placeholder="Modify the author">
 
-        <label for="imageToUpdate"><strong>Image (*jpg file)</strong></label>
-        <img style="width: 20%; height: 20%;" src="/<%=post.image.src%>"><br>
-        <input type="file" id="imageToUpdate" name="imageToUpdate" accept="image/jpg"><br>
+                    <label for="imageToUpdate"><strong>Image (*jpg file)</strong></label>
+                    <img style="width: 40%; height: 40%;" src="/<%=post.image.src%>"><br>
+                    <input type="file" id="imageToUpdate" name="imageToUpdate" accept="image/jpg">
 
-        <label for="contentToUpdate"><strong>Content</strong></label><br>
-        <textarea id="contentToUpdate" name="contentToUpdate" rows="20" cols="100"><%=post.content%></textarea><br>
+                    <button type="button" onclick="modify('<%=post.id%>')">Save</button>
+                </div>
 
-        <button type="button" onclick="modify('<%=post.id%>')">Save</button>
-    </form>
+                <div class="right-column">
+                    <textarea id="contentToUpdate" name="contentToUpdate" placeholder="Modify your post here..."><%=post.content%></textarea><br>
+                </div>
+                
+            </form>
+        </div>
+        
+    </div>
+    
 </body>
 </html>
